# ExamTasksCompiler

./: .gitignore  CMakeLists.txt  Readme.md  main.c
core/controllers/: add_question_controller.c  add_question_controller.h  generate_exam_papers_controller.c  generate_exam_papers_controller.h  main_controller.c  main_controller.h
core/models/: exam_paper.c  exam_paper.h  exam_papers.c  exam_papers.h  question.c  question.h  questions.c  questions.h
core/views/: add_question_window.c  add_question_window.h  generate_exam_papers_window.c  generate_exam_papers_window.h  main_window.c  main_window.h
core/views/main_window/: main_window.c  main_window_exam_papers_tab.c  main_window_exam_papers_tab.h  main_window_questions_tab.c  main_window_questions_tab.h
event_bus/: event_bus.c  event_bus.h  events.c  events.h
gui/: test.glade
linked_list/: linked_list.c  linked_list.h
models/: exam_paper.h  exam_papers.c  exam_papers.h  exam_papersc  question.c  question.h  questions.c  questions.h
resources/: add_question.glade  edit_exam_paper.glade  generate_exam_papers.glade  main.glade
storage/: storage.c  storage.h  storage_fields.c  storage_fields.h  storage_fileds.c
storage/models/: question.c  question.h  questions.c  questions.h
utils/: file_system.c  file_system.h  helpers.c  helpers.h  questions_compiler.c  questions_compiler.h
utils/linked_list/: linked_list.c
